# GPUCameraVideo

./: README.md  gradlew  gradlew.bat  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/mat/gpucameravideo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/mat/gpucameravideo/: MainActivity.kt  PlayerActivity.kt
app/src/main/res/layout/: activity_main.xml  activity_player.xml
app/src/main/res/menu/: main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/com/example/mat/gpucameravideo/: ExampleUnitTest.kt
base/: build.gradle
base/Base/: Context.cpp  Context.h  Math.hpp  Rotation.hpp  Size.hpp  Time.hpp
base/Codec/: MediaBuffer.hpp
base/Codec/Decode/: MediaDecoder.cpp  MediaDecoder.h  YUVFrameBuffer.cpp  YUVFrameBuffer.h
base/Codec/Encode/: Encoder.hpp  EncoderConfig.hpp  MediaEncoder.cpp  MediaEncoder.hpp
base/Filter/: Filter.cpp  Filter.h  FilterContext.cpp  FilterContext.hpp  FilterGroup.cpp  FilterGroup.h
base/GL/: EglCore.cpp  EglCore.h  FrameBuffer.cpp  FrameBuffer.h  GLContext.cpp  GLContext.hpp  GLProgram.cpp  GLProgram.h  TextureOptions.h
base/Input/: Camera.cpp  Camera.h  MediaPlayer.cpp  MediaPlayer.h  MediaRecorder .cpp  MediaRecorder .h  MediaRecorder.cpp  MediaRecorder.h  NativeInput.cpp  NativeInput.h
base/Looper/: ConditionLock.h  Function.h  Looper.cpp  Looper.h  Message.cpp  Message.h  MessageQueue.cpp  MessageQueue.h
base/Output/: DisplayView.cpp  DisplayView.h  MediaRecorder.cpp  MediaRecorder.h  NativeOutput.h
baselib/: build.gradle
baselib/src/androidTest/java/com/example/baselib/: ExampleInstrumentedTest.java
baselib/src/main/: AndroidManifest.xml
baselib/src/main/cpp/: InputBaseJNI.cpp  OutputBaseJNI.cpp
baselib/src/main/java/com/example/baselib/: GCVInput.kt  GCVOutput.kt
baselib/src/test/java/com/example/baselib/: ExampleUnitTest.java
camera/: build.gradle
camera/src/androidTest/java/com/example/cameralibrary/: ExampleInstrumentedTest.java
camera/src/main/: AndroidManifest.xml
camera/src/main/cpp/: InputCameraJNI.cpp  OutputSurfaceJNI.cpp  camera-main.cpp
camera/src/main/java/com/example/cameralibrary/: CameraMain.kt
camera/src/main/java/com/example/cameralibrary/camera/: AspectRatio.kt  Camera.kt  CameraAttributes.kt  CameraHandler.kt  CameraParam.kt  CameraSize.kt  CameraSizeCalculator.kt  CameraSizeMap.kt
camera/src/main/java/com/example/cameralibrary/camera/api/: Camera1.kt  Camera2.kt  CameraApi.kt  CameraImpl.kt
camera/src/main/java/com/example/cameralibrary/effects/: FocusMarkerView.kt
camera/src/main/java/com/example/cameralibrary/preview/: CameraSurfaceTexture.kt  CameraSurfaceTextureListener.kt  CameraSurfaceView.kt  Preview.kt  PreviewImpl.kt
camera/src/main/java/com/example/cameralibrary/preview/surfaceview/: SurfaceCallback.kt  SurfaceViewPreview.kt
camera/src/main/res/drawable/: ic_aspect_ratio.xml  ic_camera.xml  ic_flash_auto.xml  ic_flash_off.xml  ic_flash_on.xml  ic_switch_camera.xml
camera/src/main/res/layout/: layout_focus_marker.xml  surface_preview.xml
camera/src/main/res/values/: attrs.xml  strings.xml  style.xml
camera/src/test/java/com/example/cameralibrary/: ExampleUnitTest.java
codec/: CMakeLists.txt  build.gradle
codec/src/androidTest/java/com/example/codeclibrary/: ExampleInstrumentedTest.java
codec/src/main/: AndroidManifest.xml
codec/src/main/cpp/: InputMediaPlayerJNI.cpp  MediaRecorderJNI.cpp  OutputMediaRecorderJNI.cpp  OutputPlayerSurfaceJNI.cpp  codec-lib.cpp
codec/src/main/java/com/example/codeclibrary/: AudioPlayer.kt  AudioRecorder.kt  CodecMain.kt  MoviePlayer.kt  MovieRecorder.kt
codec/src/main/java/com/example/codeclibrary/playerview/: SurfacePlayerview.kt
codec/src/main/res/values/: strings.xml
codec/src/test/java/com/example/codeclibrary/: ExampleUnitTest.java
filter/: build.gradle
filter/src/androidTest/java/com/example/filterlibrary/: ExampleInstrumentedTest.java
filter/src/main/: AndroidManifest.xml
filter/src/main/cpp/: FilterGroupJNI.cpp  FilterJNI.cpp
filter/src/main/java/com/example/filterlibrary/: Filter.kt  FilterGroup.kt
filter/src/main/java/com/example/filterlibrary/effects/: BlackFilter.kt  ColorFilter.kt
filter/src/test/java/com/example/filterlibrary/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
image/: build.gradle
image/src/androidTest/java/com/example/imagelibrary/: ExampleInstrumentedTest.java
image/src/main/: AndroidManifest.xml
image/src/main/res/values/: strings.xml
image/src/test/java/com/example/imagelibrary/: ExampleUnitTest.java
